--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="card">
             <img src="./img/n13.jpg" class="front" />
             <div class="back">
-                <p>И просто моя любов <3< /p>
+                И просто моя любов <3
             </div>
         </div>
         <div class="card">
