--- a/index.html
+++ b/index.html
@@ -126,10 +126,13 @@
         <div class="card">
             <img src="./img/n15.jpg" class="front" />
             <div class="back">
-                <p>Я люблю тебя </p>
+                <p>Я люблю тебя 😻</p>
             </div>
         </div>
     </div>
+    <section class="footer">
+        <p>Онли фор Лика! 2024</p>
+    </section>
 </div>
 </body>
 
